# Digital-Employees

./: .env.example  .gitignore  CLAUDE.md  README.md  orchestrator.py  pyproject.toml  requirements.txt  roadmap.md  test_ceo_briefing.py  test_email_mcp.py  test_odoo_connection.py  test_odoo_watcher.py  test_platinum.py  test_scheduler.py
.claude/commands/: linkedin-post.md  process-inbox.md  test-generator.md
.specify/memory/: constitution.md
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Approved/: APPROVAL_platinum_test_20260223_101554.md  APPROVAL_platinum_test_20260223_101754.md
AI_Employee_Vault/Briefings/: 2026-02-23_Monday_Briefing.md
AI_Employee_Vault/Done/: EMAIL_20260209_185844_Secure_link_to_log_in_to_Claude.ai_20.md  EMAIL_20260209_185844_Verify_your_Panaversity_SSO_account.md  EMAIL_20260209_185844_Verify_your_n8n_account.md  EMAIL_20260222_103754_Blank_Metal_just_posted_a_81%_match_Asso.md  EMAIL_20260222_103754_Let's_Land_your_Next_Role!_New_Jobs_are.md  EMAIL_20260222_103754_Secure_link_to_log_in_to_Claude.ai_20.md  EMAIL_20260222_103754_Verify_your_Panaversity_SSO_account.md  EMAIL_20260222_103754_Verify_your_n8n_account.md  FILE_20260222_102717_testing.md  (+3 more)
config/: odoo_config.json  orchestrator.yaml
docs/: DEPLOYMENT.md  PLATINUM_DEMO.md  TROUBLESHOOTING.md
src/: __init__.py
tests/: __init__.py  conftest.py  test_base_watcher.py  test_e2e_bronze_tier.py  test_filesystem_watcher.py  test_linkedin_posting.py  test_linkedin_watcher.py  test_process_inbox.py  test_ralph_wiggum.py
(+131 files in other folders)
